--- a/chess_project/game/templates/game/home.html
+++ b/chess_project/game/templates/game/home.html
@@ -71,8 +71,20 @@
         </h3>
         <div class="card-body" >
           <ul class="list-group list-group-flush">
+
+            {% if player_room %}
             <li class="list-group-item mb-3" style="background-color: #45493c;" >
-              <svg xmlns="http://www.w3.org/2000/svg" width="10%" height="16" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16" style="color: #fff;">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M6 8a.5.5 0 0 0 .5.5h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L12.293 7.5H6.5A.5.5 0 0 0 6 8Zm-2.5 7a.5.5 0 0 1-.5-.5v-13a.5.5 0 0 1 1 0v13a.5.5 0 0 1-.5.5Z"/>
+              </svg>
+              <a href="{% url 'view_room' player_room.room %}">
+                <strong>Rientra in partita</strong>
+              </a>
+            </li>
+            {% endif %}
+
+            <li class="list-group-item mb-3" style="background-color: #45493c;" >
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16" style="color: #fff;">
                 <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
               </svg>
               <a href="{% url 'view_create_room' %}">
@@ -81,7 +93,7 @@
             </li>
 
             <li class="list-group-item mb-3" style="background-color: #45493c;">
-              <svg xmlns="http://www.w3.org/2000/svg" width="10%" height="20" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16" style="color: #fff;">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16" style="color: #fff;">
                 <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
               </svg>
                 <a href="{% url 'view_search_public_room' %}"><strong>Cerca partita pubblica</strong></a>
@@ -89,7 +101,7 @@
 
             <li class="list-group-item mb-3"  style="background-color: #45493c;">
               <strong  style="color: #fff;">
-                <svg xmlns="http://www.w3.org/2000/svg" width="10%" height="16" fill="currentColor" class="bi bi-door-open" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-door-open" viewBox="0 0 16 16">
                   <path d="M8.5 10c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1z"/>
                   <path d="M10.828.122A.5.5 0 0 1 11 .5V1h.5A1.5 1.5 0 0 1 13 2.5V15h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V1.5a.5.5 0 0 1 .43-.495l7-1a.5.5 0 0 1 .398.117zM11.5 2H11v13h1V2.5a.5.5 0 0 0-.5-.5zM4 1.934V15h6V1.077l-6 .857z"/>
                 </svg>
